# fixed_numbers

./: .gitignore  CMakeLists.txt
include/: fixed.h
src/: main.cpp  test.cpp
